# stm32f4-blackpill-quickstart

./: .gitignore  Cargo.toml  Embed.toml  README.md  memory.x  openocd.cfg
.cargo/: config.toml
examples/: dht22.rs
src/: main.rs
